# tmdb-api

./: Cargo.toml  readme.md
examples/: compare-movies.rs  get-film.rs
src/: config.rs  lib.rs  main.rs  url.rs
src/movies/: external_ids.rs  lists.rs  mod.rs  movie.rs  movie_results.rs  reviews.rs  status.rs
src/people/: mod.rs
src/tmdb/: mod.rs  movie.rs  person.rs
src/tmdb/movies/: alternative_titles.rs  changes.rs  credits.rs  images.rs  keywords.rs  mod.rs  movie.rs
src/tmdb/people/: person.rs
