[package]
name = "tmdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = {version = "1.25.0", features = ["rt", "macros"]}
